Docker/Gluglu/proyectos/ptaller/deploy/miportfolio/templates/deploy-webtaller.yml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: webtaller-deployment
 namespace: miportfolio
spec:
 replicas: 3
 selector:
   matchLabels:
     app: webtaller
 template:
   metadata:
     labels:
       app: webtaller
   spec:
     containers:
       - name: webtaller
         image: youssefmf/ubptaller:latest
         imagePullPolicy: Always
         ports:
           - containerPort: 80
