Docker/Gluglu/proyectos/ptaller/deploy/miportfolio/templates/service-webtaller.yaml
apiVersion: v1
kind: Service
metadata:
  name: webtaller-service
  namespace: miportfolio
spec:
  type: NodePort
  selector:
    app: webtaller
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30081
